--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Guillermo\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
+user.properties.file=/home/gmarco/.netbeans/7.4rc2/build.properties
