Finalizado el apartado configuracion

--- a/build.xml
+++ b/build.xml
@@ -70,4 +70,13 @@
     nbproject/build-impl.xml file. 
 
     -->
+    <target name="-post-jar">
+        <jar jarfile="dist/massdown.jar">
+            <zipfileset src="${dist.jar}" excludes="META-INF/*" />
+            <zipfileset src="libs/jsoup-1.7.3.jar" excludes="META-INF/*" />
+            <manifest>
+                <attribute name="Main-Class" value="com.massdown.main.Main"/>
+            </manifest>
+        </jar>
+    </target>
 </project>
