--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/massdown.jar
+dist.jar=${dist.dir}/massdown-desktop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jsoup-1.7.3.jar=libs\\jsoup-1.7.3.jar
