--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=massdown-desktop
+application.vendor=Guillermo
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/massdown-desktop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.jfxrt.jar=libs/jfxrt.jar
 file.reference.jsoup-1.7.3.jar=libs\\jsoup-1.7.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.jfxrt.jar}:\
     ${file.reference.jsoup-1.7.3.jar}:\
     ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
